# Suede

./: .gitignore  CMakeLists.txt  FUNCTIONAL_FEATURES.md  LICENSE.md  README.md
docs/: collections.md  operators.md  strings.md  structs.md  types.md
docs/paradigms/: concurrent.md  functional.md  metaprogramming.md
src/: main.cpp
src/runtime/: runtime.c
